--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   </nav>
   <!--End navBar-->
 
+  <!--Start header-->
   <header class="home" id="home">
 
     <div class="section1">
@@ -48,12 +49,12 @@
         </p>
         <div class="btn-section1">
           <a href="#contact">Book a Table</a>
-          <a href="https://www.youtube.com/">
-            <div class="play-icon">
+          <div class="play-icon">
+            <a href="https://www.youtube.com/">
               <i class="fa-solid fa-play"></i>
               Watch a Video
-            </div>
-          </a>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -61,8 +62,14 @@
         <img src="images/1.png" alt="Food plate">
       </picture>
     </div>
-    
   </header>
+  <!--End header-->
+
+  <!--Start Section1-->
+  <section>
+    
+  </section>
+  <!--End Section1-->
 
 </body>
 
