--- a/index.html
+++ b/index.html
@@ -65,11 +65,19 @@
   </header>
   <!--End header-->
 
-  <!--Start Section1-->
+  <!--Start Section2-->
   <section>
-    
+    <div class="chefs" id="chefs">
+      <h2>CHEFS</h2>
+      <p>Our<span>Proffesional</span>Chefs</p>
+      <div class="section2">
+        <img src="images/2.jpg" alt="chef">
+        <img src="images/3.jpg" alt="chef">
+        <img src="images/4.jpg" alt="chef">
+      </div>
+    </div>
   </section>
-  <!--End Section1-->
+  <!--End Section2-->
 
 </body>
 
