--- a/index.html
+++ b/index.html
@@ -66,14 +66,115 @@
   <!--End header-->
 
   <!--Start Section2-->
-  <section>
-    <div class="chefs" id="chefs">
-      <h2>CHEFS</h2>
-      <p>Our<span>Proffesional</span>Chefs</p>
+  <section class="chefs" id="chefs">
+    <div class="container">
+      <div class="main-title">
+        <h2>CHEFS</h2>
+        <p>Our<span>Proffesional</span>Chefs</p>
+      </div>
       <div class="section2">
-        <img src="images/2.jpg" alt="chef">
-        <img src="images/3.jpg" alt="chef">
-        <img src="images/4.jpg" alt="chef">
+        <div class="card">
+            <img src="images/2.jpg" alt="chef">
+          <div class="card-content">
+            <h3>Walter White</h3>
+            <span>Master Chef </span>
+            <p>
+              Velit aut quia fugit et et. Dolorum ea voluptate vel tempore
+              tenetur ipsa quae aut. Ipsum exercitationem iure minima enim
+              corporis et voluptate.
+            </p>
+          </div>
+          <ul class="social-box">
+            <li>
+              <a href="https://twitter.com" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://facebook.com" target="_blank">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://instagram.com" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://linkedin.com" target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="card">
+            <img src="images/3.jpg" alt="chef">
+          <div class="card-content">
+            <h3>Walter White</h3>
+            <span>Master Chef </span>
+            <p>
+              Velit aut quia fugit et et. Dolorum ea voluptate vel tempore
+              tenetur ipsa quae aut. Ipsum exercitationem iure minima enim
+              corporis et voluptate.
+            </p>
+          </div>
+          <ul class="social-box">
+            <li>
+              <a href="https://twitter.com" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://facebook.com" target="_blank">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://instagram.com" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://linkedin.com" target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="card">
+            <img src="images/4.jpg" alt="chef">
+          <div class="card-content">
+            <h3>Walter White</h3> 
+            <span>Master Chef </span>
+            <p>
+              Velit aut quia fugit et et. Dolorum ea voluptate vel tempore
+              tenetur ipsa quae aut. Ipsum exercitationem iure minima enim
+              corporis et voluptate.
+            </p>
+          </div>
+          <ul class="social-box">
+            <li>
+              <a href="https://twitter.com" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://facebook.com" target="_blank">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://instagram.com" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://linkedin.com" target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
