--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
       </div>
       <div class="section2">
         <div class="card">
+          <picture>
             <img src="images/2.jpg" alt="chef">
+          </picture>
           <div class="card-content">
             <h3>Walter White</h3>
             <span>Master Chef </span>
@@ -108,7 +110,9 @@
           </ul>
         </div>
         <div class="card">
-          <img src="images/3.jpg" alt="chef">
+          <picture>
+            <img src="images/3.jpg" alt="chef">
+          </picture>
           <div class="card-content">
             <h3>Walter White</h3>
             <span>Master Chef </span>
@@ -142,7 +146,9 @@
           </ul>
         </div>
         <div class="card">
-          <img src="images/4.jpg" alt="chef">
+          <picture>
+            <img src="images/4.jpg" alt="chef">
+          </picture>
           <div class="card-content">
             <h3>Walter White</h3>
             <span>Master Chef </span>
